--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 djangorestframework==3.11.0
 idna==2.9
-#mysqlclient==1.4.6
+mysqlclient==1.4.6
 pip==19.1.1
 pytz==2020.1
 requests==2.23.0
